<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/md_grey_100"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp"
        card_view:contentPaddingBottom="2dp"
        card_view:contentPaddingLeft="1dp"
        card_view:contentPaddingRight="0dp"
        card_view:contentPaddingTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/id_login_screen_tc_cb"
                    style="@style/checkbox_small"
                    android:layout_margin="3dp"
                    android:checked="true" />

                <TextView
                    android:id="@+id/textTitle"
                    style="@style/style_tv_small"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/DC"
                    android:textSize="@dimen/textsize_13_sp" />

                <TextView
                    android:id="@+id/id_served_orders_tp_tv"
                    style="@style/style_tv_small"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/mobile"
                    android:textSize="@dimen/textsize_13_sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_tv_small"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/order"
                    android:textSize="@dimen/textsize_13_sp" />

                <TextView
                    android:id="@+id/id_served_orders_dtls_tv"
                    style="@style/style_tv_small"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="@string/tiffin"
                    android:textSize="@dimen/textsize_13_sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_tv_small"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/address"
                    android:textSize="@dimen/textsize_13_sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/id_login_screen_login_btn"
                    style="@style/button_medium"
                    android:background="@drawable/selector_green"
                    android:text="@string/map" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/cancle"
                        style="@style/button_medium"
                        android:text="@string/cancle"
                        android:background="@drawable/button_border"/>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/collect"
                        style="@style/button_medium"
                        android:text="@string/Dropped"
                        android:background="@drawable/button_border"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>