<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/layout_background_color"
        android:padding="1dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/id_login_screen_tc_cb"
            style="@style/checkbox_small"
            android:layout_margin="3dp"
            android:checked="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/style_tv_small"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:text="@string/select_all"
                android:textColor="@color/colorthird"
                android:textSize="@dimen/textsize_13_sp" />

            <TextView
                style="@style/style_tv_small"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:text="@string/lunch"
                android:textColor="@color/colorthird"
                android:textSize="@dimen/textsize_20_sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/id_login_screen_login_btn1"
                style="@style/button_medium"
                android:layout_width="50dp"
                android:layout_height="34dp"
                android:background="@drawable/selector_red" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/id_login_screen_login_btn2"
                style="@style/button_medium"
                android:layout_width="50dp"
                android:layout_height="34dp"
                android:background="@drawable/selector_green" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/md_grey_100"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp"
        card_view:contentPaddingBottom="2dp"
        card_view:contentPaddingLeft="1dp"
        card_view:contentPaddingRight="0dp"
        card_view:contentPaddingTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textTitle"
                    style="@style/style_tv_small"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/DC"
                    android:textSize="@dimen/textsize_13_sp" />

                <TextView
                    android:id="@+id/id_served_orders_tp_tv"
                    style="@style/style_tv_small"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/mobile"
                    android:textSize="@dimen/textsize_13_sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_tv_small"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/order"
                    android:textSize="@dimen/textsize_13_sp" />

                <TextView
                    android:id="@+id/id_served_orders_dtls_tv"
                    style="@style/style_tv_small"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="@string/tiffin"
                    android:textSize="@dimen/textsize_13_sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_tv_small"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/address"
                    android:textSize="@dimen/textsize_13_sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/id_login_screen_login_btn"
                    style="@style/button_medium"
                    android:background="@drawable/selector_green"
                    android:text="@string/map" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/cancle"
                        style="@style/button_medium"
                        android:text="@string/cancle" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/collect"
                        style="@style/button_medium"
                        android:text="@string/collect" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>