<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.login.LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="82dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/img"
            android:contentDescription="@string/image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="187dp">

        <TextView
            style="@style/style_tv_medium"
            android:layout_marginTop="@dimen/margin_10_dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="233dp"
            android:gravity="center"
            android:fontFamily="@font/arbutus_slab"
            android:text="@string/future_food"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_login_screen_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="88dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            style="@style/style_tv_medium"
            android:layout_marginTop="@dimen/margin_10_dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="233dp"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="@string/enter_ID"
            android:textSize="20sp" />


        <com.devn.delivery.utils.MyTextInputLayout
            android:id="@+id/id_login_screen_userid_wrapper"
            style="@style/style_textinputlayout"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/id_login_screen_u_name_et"
                style="@style/style_et_medium"
                android:hint="@string/enter_ID"
                android:inputType="text"
                android:maxLength="10">
            </android.support.design.widget.TextInputEditText>
        </com.devn.delivery.utils.MyTextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/id_login_screen_login_btn"
            style="@style/button_medium"
            android:text="@string/verify"
            android:background="@drawable/button_border"/>

    </LinearLayout>


</RelativeLayout>